--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Thu Sep 22 00:31:15 CEST 2016
 app.grails.version=2.5.5
-app.name=pl.polsl.guestbook
+app.name=GrailsGuestbook
 app.version=0.1
